# cell_similarity

./: .gitignore  README.md  conda.yaml  pyproject.toml
notebooks/: Classifier.ipynb  classification.ipynb  config.yaml  dinov2_test.ipynb  embedder.ipynb  embedding_visualisation.ipynb
notebooks/.ipynb_checkpoints/: embedder-checkpoint.ipynb  embedding_visualisation-checkpoint.ipynb  label_translation-checkpoint.json
outputs/: submission_file_a8d197b201b24837baad3c8043dd4433.sh
scripts/: config.yaml  memory_test1.sh  memory_test2.sh  test.py  test.sh
scripts/logs/: log.txt
src/cell_similarity/: __init__.py  prepare_data.py
src/cell_similarity/configs/: .default_config.yaml.swp  __init__.py  config_animals.yaml  config_large.yaml  config_small.yaml  default_config.yaml
src/cell_similarity/data/: __init__.py  collate.py  datasets.py  loaders.py  transforms.py
src/cell_similarity/data/datasets/: CustomDataset.py  EmbeddingDataset.py  (+1 more)
src/cell_similarity/model/: DINOv2.py  LinearClassifier.py  LinearProjection.py  __init__.py  encoder.py
src/cell_similarity/run/: submit.py
src/cell_similarity/scripts/: config.yaml  config_test2.yaml  memory_test1.py  memory_test2.py  training_metrics.json
src/cell_similarity/train/: train.py  train_test.py
src/cell_similarity/training/: .train.py.swp  train.py
src/cell_similarity/utils/: config.py  memory.py
src/tests/data/: test_dataloader.py  test_dataset.py
src/tests/models/: test_LinearClassifier.py  test_dinov2encoder.py
src/tests/resources/: config_test_dinov2.yaml
src/tests/train/: test_train.py
(+16 files in other folders)
