[project]
name = "cell-similarity"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Etienne Guevel", email = "etienneguev@gmail.com" }
]
dependencies = [
    "dinov2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/cell_similarity"]
